[project]
name = "GeoCloudService"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "IC2", email = "houlu8674@bupt.edu.cn"},
]
dependencies = [
    "flask>=3.0.3",
    "pika>=1.3.2",
    "waitress>=3.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
