[project]
name = "GeoCloudService"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "IC2", email = "houlu8674@bupt.edu.cn"}
]
dependencies = [
    "flask>=3.0.3",
    "pika>=1.3.2",
    "waitress>=3.0.0",
    "cx-oracle>=8.3.0",
    "dbutils>=3.1.0",
    "schedule>=1.2.2",
    "oracledb>=2.4.1",
    "datetime>=5.5",
    "flask-siwadoc>=0.2.2",
    "pydantic>=1.9.0",
    "geopandas>=1.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
