[project]
name = "GeoCloudService"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "IC2", email = "houlu8674@bupt.edu.cn"}
]
dependencies = [
    "flask>=3.0.3",
    "pika>=1.3.2",
    "waitress>=3.0.0",
    "dbutils>=3.1.0",
    "schedule>=1.2.2",
    "oracledb>=2.4.1",
    "datetime>=5.5",
    "flask-siwadoc>=0.2.2",
    "pydantic>=1.9.0",
    "geopandas>=1.0.1",
    "flask-cors>=5.0.0",
    "marshmallow>=3.23.1",
    "requests>=2.32.3",
    "minio>=7.2.12",
    "gmssl>=3.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false